--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.19.0",
     "connect-mongo": "^3.1.2",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
@@ -20,6 +21,8 @@
     "http-errors": "^1.7.3",
     "mongoose": "^5.6.13",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
