--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"passport": "^0.4.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
-		"serve-favicon": "^2.5.0"
+		"serve-favicon": "^2.5.0",
+		"talkjs": "^0.14.0"
 	},
 	"devDependencies": {
 		"mocha": "^7.0.1",
