--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"multer": "^1.4.2",
 		"multer-storage-cloudinary": "^2.2.1",
 		"node-sass-middleware": "^0.11.0",
+		"nodemailer": "^6.4.3",
 		"passport": "^0.4.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
