--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.0",
 		"hbs": "^4.0.4",
+		"helper-date": "^1.0.1",
 		"http-errors": "^1.7.3",
 		"mongoose": "^5.6.13",
 		"morgan": "^1.9.1",
